<resources>

    <string name="app_name">StopWatch</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_stop_watch">StopWatchActivity</string>
    <string name="timer">00:00:00</string>
    <string name="startText">Start</string>
    <string name="resetText">Reset</string>
    <string name="stopText">Stop</string>
    <string name="backgroundText">CPRE 388</string>
    <string name="timerMs">.0</string>

    
</resources>